<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/toolbar_height"
    tools:context=".reminder.creating.CreateReminderFragment">

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input_layout"
                android:layout_margin="@dimen/common_margin"
                android:layout_width="match_parent"
                style="@style/edit_text_layout_style"
                android:layout_height="@dimen/edit_text_height"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/edit_text_style"
                    android:hint="@string/hint_name_reminder" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_input_layout"
                android:layout_margin="@dimen/common_margin"
                android:layout_width="match_parent"
                style="@style/edit_text_layout_style"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                app:layout_constraintTop_toBottomOf="@id/name_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/edit_text_style"
                    android:maxLength="277"
                    android:maxLines="20"
                    android:hint="@string/hint_description_reminder" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_height"
                style="@style/spinner_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_input_layout"/>

            <TextView
                android:id="@+id/hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin"
                android:fontFamily="@font/rubik_light"
                android:text="@string/hint_chart_reminder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/type_spinner" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checkedButton="@id/week_button"
                style="@style/toggle_layout_style"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                app:selectionRequired="true"
                app:layout_constraintTop_toBottomOf="@id/hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/week_button"
                    style="@style/material_toggle_button_style"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/by_week_day" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/calendar_button"
                    style="@style/material_toggle_button_style"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/by_calendar_day" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <include
                android:id="@+id/include"
                layout="@layout/fragment_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toggleGroup" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>